logs/op_pointnet2__ext_furthest_point_sampling/run_10/summary.txt
=== Op Pipeline Round 10 Summary ===
Operator: pointnet2__ext_furthest_point_sampling
Time: 2026-07-06 16:07:18

--- build.log (tail 20) ---
/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/op_host/pointnet2__ext_furthest_point_sampling.cpp:7:5: error: ‘pointnet2__ext_furthest_point_samplingTilingData’ was not declared in this scope
    7 |     pointnet2__ext_furthest_point_samplingTilingData tiling;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/op_host/pointnet2__ext_furthest_point_sampling.cpp:19:5: error: ‘tiling’ was not declared in this scope; did you mean ‘optiling’?
   19 |     tiling.set_B(B); tiling.set_N(N); tiling.set_M(M); tiling.set_totalLength(B * M);
      |     ^~~~~~
      |     optiling

CMake Error at cmake/func.cmake:29 (message):
  opbuild run failed!
Call Stack (most recent call first):
  op_host/CMakeLists.txt:4 (opbuild)


-- Configuring incomplete, errors occurred!
See also "/home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/pointnet2__ext_furthest_point_sampling/build_out/CMakeFiles/CMakeOutput.log".
gmake: Makefile: 没有那个文件或目录
gmake: *** 没有规则可制作目标“Makefile”。 停止。
gmake: Makefile: 没有那个文件或目录
gmake: *** 没有规则可制作目标“Makefile”。 停止。

--- verify.log (tail 20) ---
========== 3. VERIFY: pointnet2__ext_furthest_point_sampling ==========
[WARN] 未找到 AclNNInvocation 目录: /home/orange/pipeline_tool/AscendDevTool/op_builder/ops_src/pointnet2__ext_furthest_point_samplingSample/FrameworkLaunch/AclNNInvocation，跳过验证步骤。

--- test.log (tail 30) ---
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/latest owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
/home/orange/miniconda3/envs/torch_npu/lib/python3.10/site-packages/torch_npu/utils/collect_env.py:58: UserWarning: Warning: The /usr/local/Ascend/ascend-toolkit/8.3.RC1/x86_64-linux/ascend_toolkit_install.info owner does not match the current owner.
  warnings.warn(f"Warning: The {path} owner does not match the current owner.")
=== FPS Operator Test ===
  Compiled + loaded OK
  B=  1 N= 128 M= 32: RuntimeError: The Inner error is reported as above. The process exits for this inner error, and the current working operator name is F
  B=  1 N= 512 M= 64: FAIL mismatch=64/64
  B=  2 N= 256 M= 48: FAIL mismatch=96/96
  B=  4 N= 128 M= 16: FAIL mismatch=64/64
  B=  1 N=1024 M=128: FAIL mismatch=128/128
  B=  2 N= 500 M=100: FAIL mismatch=200/200
  B=  4 N= 200 M= 50: FAIL mismatch=200/200
  B=  1 N=  64 M=  8: FAIL mismatch=8/8
  B=  8 N= 100 M= 20: FAIL mismatch=160/160
  B=  3 N= 300 M=150: FAIL mismatch=450/450

  Result: 0/10 passed
FAILED

--- status ---
BUILD_FAILED
BUILD_ERROR: 编译失败，未生成 .run 包
VERIFY_OK
INSTALL_FAILED
TEST_ERROR
